k8s/apps/tools/bentopdf/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bentopdf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app.kubernetes.io/name: bentopdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bentopdf
    spec:
      containers:
        - name: bentopdf
          image: ghcr.io/alam00000/bentopdf:2.8.3@sha256:69c188fd267da4df693dac205a4fc585e1fb7005a0db758612ee439eda989ee2
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: bentopdf
spec:
  selector:
    app.kubernetes.io/name: bentopdf
  ports:
    - port: 80
      targetPort: 8080
      name: http
