k8s/apps/tools/bentopdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf
  namespace: bentopdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "BentoPDF"
    gethomepage.dev/description: "PDF tools"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "pdf.png"
    gethomepage.dev/href: "https://bentopdf.item.fyi"
    gethomepage.dev/siteMonitor: "https://bentopdf.item.fyi"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=bentopdf"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bentopdf.item.fyi`)
      services:
        - name: bentopdf
          port: 80
  tls: {}
